<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.intellisys.singlescreenapp.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/logo"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:padding="20dp"
        android:text="@string/working_hours"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/description_phone_logo"
            android:src="@drawable/phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_numer"
            android:textColor="@android:color/black"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/darker_gray"
        android:padding="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/description_location_logo"
            android:src="@drawable/location"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="30sp"/>
    </LinearLayout>


</LinearLayout>
